# latex-compiler

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
docker/: Dockerfile
src/: latex.rs  main.rs
src/cli/: mod.rs
src/cli/command/: serve.rs
src/router/: mod.rs
src/router/api/: mod.rs
src/router/api/v0/: mod.rs
src/router/api/v0/compile/: mod.rs  root.rs
src/router/api/v0/healthcheck/: mod.rs  root.rs
