[package]
name = "latex-compiler"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
axum = "0.8.4"
clap = { version = "4.5", features = ["std", "derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
